--- a/frontend/public/locales/zh/common.json
+++ b/frontend/public/locales/zh/common.json
@@ -862,6 +862,9 @@
         "stock": "库存数量",
         "stockHint": "填 -1 表示不限库存。"
       },
+      "formModal": {
+        "description": "填写积分商品在商城展示时的详细信息。"
+      },
       "noProductsFound": "暂无商品数据",
       "searchPlaceholder": "按商品名称搜索",
       "status": "状态",
@@ -898,6 +901,15 @@
         "process": "标记为处理中",
         "reject": "驳回申请",
         "ship": "标记为已发货"
+      },
+      "statusDialog": {
+        "title": "更新状态为{{status}}",
+        "description": "确认将该兑换记录更新为{{status}}，系统会立即通知用户。",
+        "notesLabel": "处理备注",
+        "notesRequiredLabel": "处理备注（必填）",
+        "notesPlaceholder": "请说明本次处理的原因和进展。",
+        "notesOptional": "选填：补充说明有助于用户理解此次处理。",
+        "confirm": "确认更新"
       },
       "confirmUpdateStatus": "确定要将状态更新为 {{status}} 吗？",
       "detail": {
