feat: 添加请求ID相关抽屉组件，优化日志展示和国际化支持

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1100,6 +1100,13 @@
         "error_line": "Line",
         "error_time": "Time"
       },
+      "drawer": {
+        "title": "Request ID: {{id}}",
+        "refresh": "Refresh",
+        "loading": "Loading related logs...",
+        "auditTitle": "Audit ({{count}})",
+        "errorsTitle": "Errors ({{count}})"
+      },
       "dateFrom": "Date from",
       "dateTo": "Date to"
     },
