feat: 添加用户最后登录时间的动态查询，优化用户管理功能 feat: 更新状态标签的国际化支持，优化前端用户体验 fix: 修复管理布局中的样式问题，提升界面一致性

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -815,6 +815,7 @@
       "pending": "Pending",
       "completed": "Completed",
       "cancelled": "Cancelled",
+      "statusLabel": "Status",
       "approve": "Approve",
       "reject": "Reject",
       "action": {
