feat: 添加广播消息功能，支持管理员发送系统消息并验证优先级和目标用户

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -686,6 +686,7 @@
       "statusInactive": "Inactive",
       "title": "User Management",
       "description": "View and manage platform users",
+      "refreshing": "Refreshing...",
       "searchPlaceholder": "Search by username, email or name",
       "noUsersFound": "No users found",
       "tryDifferentFilters": "Try adjusting filters",
